crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_completion_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::ActiveSequenceCompletionReceipt;

fn decode(bytes: &[u8]) {
    let _: ActiveSequenceCompletionReceipt = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
